@@ -31,7 +31,7 @@
     (puthash "name" "org2blog" p)
     (puthash "version" "1.1.0" p)
     (puthash "doc" "Blog from Org mode to WordPress" p)
-    (puthash "emacs" "26.2" p)
+    (puthash "emacs" "26.3" p)
     (puthash "org" "9.1.9" p)
     (puthash "requirements"
              '((htmlize "1.55" "https://github.com/hniksic/emacs-htmlize.git")
